Write in to csv files using csv writer

--- a/Working with CSVs.ipynb
+++ b/Working with CSVs.ipynb
@@ -20,24 +20,84 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('emp.csv') as file:\n",
+    "    line = 0\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        if line == 0:\n",
+    "            print(f'{\", \".join(row)}')\n",
+    "            line += 1\n",
+    "        else:\n",
+    "            print(f'{row[0]} works in the {row[1]} department, and was born in {row[2]}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Using Dict Reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('emp.csv') as file:\n",
+    "    reader = csv.DictReader(file)\n",
+    "    print(f'{\", \".join(reader.fieldnames)}')\n",
+    "    for row in reader:\n",
+    "        print('{} works in the {} department, and was born in {}'.format(row['name'], row['department'], row['birthday month']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Writing in to files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [['name', 'department', 'birthday month'], ['Durgam Rajesh', 'Computers', ' November'], ['John Doe', 'Accounting', 'January'], ['Erica Meyers', 'IT', 'March'], ['Kalyani', 'Business', ' September']]\n",
+    "with open('emp2.csv', 'w') as file:\n",
+    "    writer = csv.writer(file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "#     writer.writerow(['name', 'department', 'DOB']) #write each row of list of items\n",
+    "    writer.writerows(data)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['name', 'department', 'birthday month']\n",
-      "['Durgam Rajesh', 'Computers', ' November']\n",
-      "['John Doe', 'Accounting', 'January']\n",
-      "['Erica Meyers', 'IT', 'March']\n",
-      "['Kalyani', 'House Wife', ' September']\n"
+      "name,department,birthday month\n",
+      "\n",
+      "Durgam Rajesh,Computers, November\n",
+      "\n",
+      "John Doe,Accounting,January\n",
+      "\n",
+      "Erica Meyers,IT,March\n",
+      "\n",
+      "Kalyani,Business, September\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "with open('emp.csv') as file:\n",
-    "    reader = csv.reader(file)\n",
-    "    for row in reader:\n",
-    "        print(row)"
+    "!cat emp2.csv"
    ]
   },
   {
