write using dict writer

--- a/Working with CSVs.ipynb
+++ b/Working with CSVs.ipynb
@@ -101,6 +101,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Writing to csv using DictWriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('emp3.csv', 'w') as file:\n",
+    "    fieldnames = ['emp_name', 'dept', 'birth month']\n",
+    "    writer = csv.DictWriter(file, fieldnames)\n",
+    "    writer.writeheader()\n",
+    "    writer.writerow({'emp_name': 'Suresh Veenam', 'dept': 'Accounting', 'birth month': 'November'})\n",
+    "    writer.writerow({'emp_name': 'Valentina Bladja', 'dept': 'IT', 'birth month': 'March'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emp_name,dept,birth month\n",
+      "\n",
+      "Suresh Veenam,Accounting,November\n",
+      "\n",
+      "Valentina Bladja,IT,March\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat emp3.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
