Reading and Writing csv using pandas

--- a/Working with CSVs.ipynb
+++ b/Working with CSVs.ipynb
@@ -144,6 +144,512 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# using pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Reading csv file using pandas. Based on https://realpython.com/python-csv/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Hire Date</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Sick Days remaining</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>superman</td>\n",
+       "      <td>03/15/14</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>antman</td>\n",
+       "      <td>06/01/15</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>prabhas</td>\n",
+       "      <td>05/12/14</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>durgam rajesh</td>\n",
+       "      <td>11/01/13</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>kalyani</td>\n",
+       "      <td>08/12/14</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>vrushali karna</td>\n",
+       "      <td>05/23/13</td>\n",
+       "      <td>66000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Name Hire Date   Salary  Sick Days remaining\n",
+       "0        superman  03/15/14  50000.0                   10\n",
+       "1          antman  06/01/15  65000.0                    8\n",
+       "2         prabhas  05/12/14  45000.0                   10\n",
+       "3   durgam rajesh  11/01/13  70000.0                    3\n",
+       "4         kalyani  08/12/14  48000.0                    7\n",
+       "5  vrushali karna  05/23/13  66000.0                    8"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('hr.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(df['Hire Date'][0])) #so let's convert it to date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>To use a different column as the DataFrame index, add the index_col optional parameter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hire Date</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Sick Days remaining</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>superman</th>\n",
+       "      <td>03/15/14</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>antman</th>\n",
+       "      <td>06/01/15</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prabhas</th>\n",
+       "      <td>05/12/14</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>durgam rajesh</th>\n",
+       "      <td>11/01/13</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kalyani</th>\n",
+       "      <td>08/12/14</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vrushali karna</th>\n",
+       "      <td>05/23/13</td>\n",
+       "      <td>66000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Hire Date   Salary  Sick Days remaining\n",
+       "Name                                                  \n",
+       "superman        03/15/14  50000.0                   10\n",
+       "antman          06/01/15  65000.0                    8\n",
+       "prabhas         05/12/14  45000.0                   10\n",
+       "durgam rajesh   11/01/13  70000.0                    3\n",
+       "kalyani         08/12/14  48000.0                    7\n",
+       "vrushali karna  05/23/13  66000.0                    8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('hr.csv', index_col='Name')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Lets force pandas to read data as a date with the parse_dates optional parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hire Date</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Sick Days remaining</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>superman</th>\n",
+       "      <td>2014-03-15</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>antman</th>\n",
+       "      <td>2015-06-01</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prabhas</th>\n",
+       "      <td>2014-05-12</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>durgam rajesh</th>\n",
+       "      <td>2013-11-01</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kalyani</th>\n",
+       "      <td>2014-08-12</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vrushali karna</th>\n",
+       "      <td>2013-05-23</td>\n",
+       "      <td>66000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Hire Date   Salary  Sick Days remaining\n",
+       "Name                                                   \n",
+       "superman       2014-03-15  50000.0                   10\n",
+       "antman         2015-06-01  65000.0                    8\n",
+       "prabhas        2014-05-12  45000.0                   10\n",
+       "durgam rajesh  2013-11-01  70000.0                    3\n",
+       "kalyani        2014-08-12  48000.0                    7\n",
+       "vrushali karna 2013-05-23  66000.0                    8"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('hr.csv', index_col='Name', parse_dates=['Hire Date'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Also tell pandas.read_csv() to ignore existing column names using the header=0 optional parameter. </b><i>Fix column names, use the names optional parameter to provide to override column names</i><br> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hired</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Sick Days</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Employee</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>superman</th>\n",
+       "      <td>2014-03-15</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>antman</th>\n",
+       "      <td>2015-06-01</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>prabhas</th>\n",
+       "      <td>2014-05-12</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>durgam rajesh</th>\n",
+       "      <td>2013-11-01</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kalyani</th>\n",
+       "      <td>2014-08-12</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vrushali karna</th>\n",
+       "      <td>2013-05-23</td>\n",
+       "      <td>66000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Hired   Salary  Sick Days\n",
+       "Employee                                     \n",
+       "superman       2014-03-15  50000.0         10\n",
+       "antman         2015-06-01  65000.0          8\n",
+       "prabhas        2014-05-12  45000.0         10\n",
+       "durgam rajesh  2013-11-01  70000.0          3\n",
+       "kalyani        2014-08-12  48000.0          7\n",
+       "vrushali karna 2013-05-23  66000.0          8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('hr.csv', \n",
+    "            index_col='Employee', \n",
+    "            parse_dates=['Hired'], \n",
+    "            header=0, \n",
+    "            names=['Employee', 'Hired','Salary', 'Sick Days'])\n",
+    "df #Notice that, since the column names changed, the columns specified in the index_col and parse_dates optional parameters must also be changed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Writing CSV Files With pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('hr.csv', \n",
+    "            index_col='Employee', \n",
+    "            parse_dates=['Hired'],\n",
+    "            header=0, \n",
+    "            names=['Employee', 'Hired', 'Salary', 'Sick Days'])\n",
+    "df.to_csv('hrdata_modified.csv') # write in to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee,Hired,Salary,Sick Days\n",
+      "superman,2014-03-15,50000.0,10\n",
+      "antman,2015-06-01,65000.0,8\n",
+      "prabhas,2014-05-12,45000.0,10\n",
+      "durgam rajesh,2013-11-01,70000.0,3\n",
+      "kalyani,2014-08-12,48000.0,7\n",
+      "vrushali karna,2013-05-23,66000.0,8\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat hrdata_modified.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
